2008-08-25  Sarath Lakshman  <sarathlakshman@slynux.org>

        * pitivi/bin.py:
		Wrote record() for SmartCaptureBin by setting Sources to NULL->READY # Commented since video lagging occurs
		SinkBin class timeoverlay not linking to queue issue fixed.

2008-08-23  Sarath Lakshman  <sarathlakshman@slynux.org>

        * pitivi/bin.py:
		Added Discover, Optimised SmartStreamBin using decodebin [Tried to use playbin:failure], Added timeoverlay for SinkBin
	* pitivi/ui/netstream_managerdialog.py:
		Added statusbar, improved debug messages

2008-08-19  Sarath Lakshman  <sarathlakshman@slynux.org>

        * pitivi/bin.py:
	        Added SinkBin, fixed naming for queues, increased queue size [partial revert of r1231]
	* pitivi/ui/webcam_manager.py:
		Implemented SinkBin, Added threads for recording

2008-08-16  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/threads.py:
	Added convenience CallbackThread class

2008-08-12  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/bin.py:
	There's currently an issue with audio sources by which they do not
	properly reset when going to READY. We workaround this by forcing the
	sources to NULL and then back to READY before capturing.
	Name the various queues to make debugging easier.
	Increase the size of the queues.
	* pitivi/ui/webcam_managerdialog.py:
	Name the various queues to make debugging easier.
	Increase the size of the queues.

2008-08-10  Sarath Lakshman  <sarathlakshman@slynux.org>
        * pitivi/: ui/netstream_manager.py
	Rewrote with SmartBin

2008-07-30  Sarath Lakshman  <sarathlakshman@slynux.org>
	* pitivi/: ui/screencast_manager.glade, screencast_managerdialog.py
	Added basic istanbul integration [Screencast Capture] using dbus interface.

2008-07-20  Sarath Lakshman  <sarathlakshman@slynux.org>
	* pitivi/: bin.py
	Added record () for SmartCaptureBin; Couldn't implement tee successfully
	Modified self.vtee from identity to tee

2008-07-20  Sarath Lakshman  <sarathlakshman@slynux.org>