@@ -1034,10 +1034,24 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkStatusbar" id="status">
-	      <property name="width_request">397</property>
+	    <widget class="GtkLabel" id="status">
+	      <property name="width_request">404</property>
+	      <property name="height_request">22</property>
 	      <property name="visible">True</property>
-	      <property name="has_resize_grip">True</property>
+	      <property name="label" translatable="yes"></property>
+	      <property name="use_underline">False</property>
+	      <property name="use_markup">False</property>
+	      <property name="justify">GTK_JUSTIFY_LEFT</property>
+	      <property name="wrap">False</property>
+	      <property name="selectable">False</property>
+	      <property name="xalign">0.5</property>
+	      <property name="yalign">0.5</property>
+	      <property name="xpad">0</property>
+	      <property name="ypad">0</property>
+	      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	      <property name="width_chars">-1</property>
+	      <property name="single_line_mode">False</property>
+	      <property name="angle">0</property>
 	    </widget>
 	    <packing>
 	      <property name="padding">2</property>
